--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "cmdk": "^1.1.1",
     "cookies-next": "^4.3.0",
     "dayjs": "^1.11.13",
+    "embla-carousel": "^8.6.0",
+    "embla-carousel-auto-scroll": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "framer-motion": "^11.11.4",
     "gsap": "^3.13.0",
     "intl-locale-textinfo-polyfill": "^2.1.1",
